# FocusTracker

./: .gitignore  CMakeCache.txt  Makefile  README.md  arma-100.mat  arma-1000.mat  arma-10000.mat  arma-2000  arma-2000.mat  arma-3000.mat  arma-500.mat  arma-5000.mat  armaica  armaout  cmake_install.cmake  deskarmaoutput  generateMatrix.py  ica_bin  itpp-100.mat  itpp-1000.mat  itpp-10000.mat  itpp-2000  itpp-2000.mat  itpp-3000.mat  itpp-500.mat  itpp-5000.mat
iOS/FocusTracker/: Podfile
iOS/FocusTracker/FocusTracker/: AppDelegate.h  AppDelegate.m  DataBuffer.cpp  DataBuffer.h  DataBuffer.hpp  DataBuffer.m  DataBuffer.mm  DrawingUtility.h  ImageAverage.h  ImageAverage.m  ImageAverage.mm  Info.plist  PulseDetector.h  PulseDetector.mm  UIImage+Crop.m  ViewController.h  ViewController.m  ViewController.mm  ica.cpp  ica.h  main.m
iOS/FocusTracker/FocusTracker.xcodeproj/: project.pbxproj
iOS/FocusTracker/FocusTracker.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/FocusTracker/FocusTracker.xcworkspace/: contents.xcworkspacedata
iOS/FocusTracker/FocusTracker/Classes/: BEMAverageLine.h  BEMCircle.h  BEMLine.h  BEMPermanentPopupView.h  BEMSimpleLineGraphView.h
ica/: CMakeLists.txt  armaica.cpp  armaica.hpp  ica.cpp  prog
