cmake_minimum_required(VERSION 3.7)
find_package(OpenCV REQUIRED)
find_package(Armadillo REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${ARMADILLO_INCLUDE_DIRS}/armadillo)
add_executable (ica_bin ica.cpp)
add_executable (armaica armaica.cpp)
target_link_libraries(ica_bin ${OpenCV_LIBS})
target_link_libraries(armaica ${ARMADILLO_LIBRARIES})
